login.html container and img profile and name add username and password inputs add some style.css

--- a/login.html
+++ b/login.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<div class="container">
+    <div class="img">
+        <img src="assets/img/mohammadrahimaee.png" alt="avatar" class="loginImage">
+        <h3 class="imgText">
+            Mohammad Rahimaee
+        </h3>
+        <div class="inputs">
+            <form action="" method="post">
+                <input class="inputUsername" type="text" name="username" id="username" placeholder="username">
+                <input class="inputPassword" type="password" name="password" id="password" placeholder="password">
+                <button class="btn">
+                    Login
+                </button>
+            </form>
+        </div>
 
+    </div>
+</div>
 </body>
 </html>
