add fonts-awesome to style.css

--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login Page</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
@@ -14,8 +15,10 @@
         </h3>
         <div class="inputs">
             <form action="" method="post">
-                <input class="inputUsername" type="text" name="username" id="username" placeholder="username">
-                <input class="inputPassword" type="password" name="password" id="password" placeholder="password">
+                <i class="fa fa-user icon1"></i>
+                <input class="inputUsername" type="text" name="username" id="username" placeholder="Username">
+                <i class="fa fa-user icon2"></i>
+                <input class="inputPassword" type="password" name="password" id="password" placeholder="Password">
                 <button class="btn">
                     Login
                 </button>
