--- a/login.html
+++ b/login.html
@@ -15,10 +15,14 @@
         </h3>
         <div class="inputs">
             <form action="" method="post">
-                <i class="fa fa-user icon1"></i>
-                <input class="inputUsername" type="text" name="username" id="username" placeholder="Username">
-                <i class="fa fa-user icon2"></i>
-                <input class="inputPassword" type="password" name="password" id="password" placeholder="Password">
+                <div class='Username' style="display: inline">
+                    <i class="fa fa-user icon1"></i>
+                    <input class="inputUsername" type="text" name="username" id="username" placeholder="Username">
+                </div>
+                <div class="Password">
+                    <i class="fa fa-lock icon2"></i>
+                    <input class="inputPassword" type="password" name="password" id="password" placeholder="Password">
+                </div>
                 <button class="btn">
                     Login
                 </button>
